--- a/expenseTracker/package.json
+++ b/expenseTracker/package.json
@@ -16,7 +16,10 @@
     "@mui/material": "^6.4.7",
     "axios": "^1.8.1",
     "chart.js": "^4.4.8",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "expensetracker": "file:",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
